@@ -1,2 +1,1 @@
-* add split on checks (currently say that file is invalid).
 * add tests for exotic actions (in group API).
