@@ -48,7 +48,7 @@ etsf_properties = {
    "occupations":ETSF_PROP_VAR_SUB_ACCESS,
    "real_space_wavefunctions":ETSF_PROP_VAR_SUB_ACCESS,
    "reduced_coordinates_of_plane_waves":ETSF_PROP_VAR_SUB_ACCESS + ETSF_PROP_VAR_TR_SYMMETRY,
-   "coordinates_of_grid_points":ETSF_PROP_VAR_UNFORMATTED,
+   "coordinates_of_basis_grid_points":ETSF_PROP_VAR_UNFORMATTED,
    "density":ETSF_PROP_VAR_UNFORMATTED + ETSF_PROP_VAR_UNITS,
    "correlation_potential":ETSF_PROP_VAR_UNFORMATTED + ETSF_PROP_VAR_UNITS,
    "exchange_correlation_potential":ETSF_PROP_VAR_UNFORMATTED + ETSF_PROP_VAR_UNITS,
@@ -64,6 +64,7 @@ etsf_properties = {
    "number_of_coefficients":ETSF_PROP_VAR_KDEP,
    "gw_corrections":ETSF_PROP_VAR_SUB_ACCESS,
    "number_of_states":ETSF_PROP_VAR_UNFORMATTED,
+   "number_of_coefficients_per_grid_point":ETSF_PROP_VAR_UNFORMATTED,
    "reduced_symmetry_matrices":ETSF_PROP_VAR_SYMMORPHIC,
    "max_number_of_states":ETSF_PROP_DIM_SPLIT,
    "number_of_kpoints":ETSF_PROP_DIM_SPLIT,
